# gwdatalens

./: .gitignore  LICENSE  README.md  environment.yml  pixi.toml  pyproject.toml
.github/workflows/: python-publish.yml
gwdatalens/: __init__.py  cli.py  django_copy.py  version.py
gwdatalens/app/: app.py  config.toml  database_template.toml  main.py  settings.py
gwdatalens/app/assets/: custom.css
gwdatalens/app/callbacks/: __init__.py  general.py  models.py  overview.py  qc.py  result.py
gwdatalens/app/src/: utils.py
gwdatalens/app/src/components/: button_help_modal.py  ids.py  layout.py  model_dropdown.py  overview_chart.py  overview_map.py  qc_chart.py  qc_dropdowns.py  qc_results_table.py  tab_overview.py  tab_qc.py  tab_qc_result.py
gwdatalens/app/src/data/: interface.py  qc_definitions.py  source.py  traval.py
gwdatalens/assets/: custom.css
gwdatalens/assets/locale/: general.en.yml  general.nl.yml
gwdatalens/django/: DJANGO_HELP.md  README.md  urls.py
gws_qc/: __init__.py  version.py
gws_qc/app/: app.py  callbacks.py  config.toml  main.py  settings.py
gws_qc/app/assets/: custom.css  qc_dashboard_help.md
gws_qc/app/callbacks/: general.py  models.py  overview.py  qc.py  result.py
gws_qc/app/locale/: general.en.yml  general.nl.yml
gws_qc/app/src/: utils.py
gws_qc/app/src/components/: alert.py  button_help_modal.py  ids.py  layout.py  model_buttons.py  model_dropdown.py  model_plots.py  overview_chart.py  overview_map.py  overview_table.py  qc_chart.py  qc_dropdowns.py  qc_results_table.py  qc_rules.py  qc_rules_form.py  qc_table.py  qc_traval_button.py  qc_traval_buttons.py  tab_model.py  tab_overview.py  tab_qc.py  tab_qc_result.py  tab_traval.py  tabs.py
gws_qc/app/src/data/: config.py  datamodel.py  qc_definitions.py  source.py  source_hpd.py  util.py
scripts/: build_pastastore.py
